# matrix-send-rs

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: command.rs  dir.rs  main.rs  matrix.rs
src/command/: loggedin.rs
src/command/loggedin/: room.rs
src/command/loggedin/room/: user.rs
