[package]
name = "matrix-send"
version = "0.2.1"
authors = ["Tilo Spannagel <development@tilosp.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/tilosp/matrix-send-rs"
homepage = "https://crates.io/crates/matrix-send"
keywords = ["matrix", "chat", "messaging"]
description = "Non-Interactive CLI Matrix Client"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
serde_json = "1.0"
directories = "4.0"
tokio = { version = "1.19", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
clap = { version = "3.1", features = ["derive"] }
atty = "0.2"
matrix-sdk = { version = "0.4", default-features = false, features = [
    "rustls-tls",
    "markdown",
] }
mime = "0.3"
mime_guess = "2.0"

[profile.release]
strip = "symbols"
lto = true

[profile.release-tiny]
inherits = "release"
opt-level = "s"

