[package]
name = "matrix-send"
version = "0.2.2"
authors = ["Tilo Spannagel <development@tilosp.de>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tilosp/matrix-send-rs"
homepage = "https://crates.io/crates/matrix-send"
keywords = ["matrix", "chat", "messaging"]
description = "Non-Interactive CLI Matrix Client"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.3", features = ["serde"] }
serde_json = "1.0"
directories = "4.0"
# ruma-client-api 0.15.2 had a bug: ruma-client-api  = { version =  ">=0.15.0, <0.15.2" }
tokio = { version = "1.20", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
clap = { version = "*", features = ["derive"] }
atty = "0.2"
matrix-sdk = { version = "0.6", default-features = false, features = [
    "rustls-tls",
    "markdown",
    "anyhow",
    "e2e-encryption",
    "sled",
] }
mime = "0.3"
mime_guess = "2.0"
tracing-subscriber = "0.3.15"
tracing = "*"

[profile.release]
strip = "symbols"
lto = true

[profile.release-tiny]
inherits = "release"
opt-level = "s"
